--- a/app/src/main/res/layout/home_page_layout.xml
+++ b/app/src/main/res/layout/home_page_layout.xml
@@ -8,33 +8,31 @@
         android:background="@drawable/home_page_bg">
 
     <com.xuexiang.xui.widget.button.ButtonView
-            android:id="@+id/buttonView8"
+            android:id="@+id/home_login_button"
             style="@style/ButtonView.Blue"
             android:layout_width="248px"
             android:layout_height="130px"
             android:layout_marginStart="64dp"
             android:layout_marginTop="472dp"
-            android:layout_marginEnd="68dp"
             android:text="登录"
             android:textSize="24sp"
-            app:layout_constraintEnd_toStartOf="@+id/buttonView3"
-            app:layout_constraintHorizontal_bias="0.096"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints" />
 
     <com.xuexiang.xui.widget.button.ButtonView
-            android:id="@+id/buttonView3"
+            android:id="@+id/home_register_button"
             style="@style/ButtonView.Blue"
             android:layout_width="248px"
             android:layout_height="130px"
-            android:layout_marginEnd="60dp"
+            android:layout_marginStart="68dp"
+            android:layout_marginTop="472dp"
+            android:layout_marginEnd="64dp"
             android:text="注册"
             android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="@+id/buttonView8"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/buttonView8"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/home_login_button"
+            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
