--- a/app/src/main/res/layout/show_time_page_layout.xml
+++ b/app/src/main/res/layout/show_time_page_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
         android:background="#81D2FF"
         android:orientation="vertical">
 
@@ -52,4 +52,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             tools:listitem="@layout/adapter_time_item" />
+
+    <include layout="@layout/fragment_bottom_view" />
 </LinearLayout>
