--- a/app/src/main/res/layout/adapter_time_item.xml
+++ b/app/src/main/res/layout/adapter_time_item.xml
@@ -2,7 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/time_item"
-        android:layout_width="871px"
+        android:layout_width="331dp"
+        android:foreground="@drawable/bd_show_time"
+        app:cardBackgroundColor="@color/xui_config_color_transparent"
+        app:cardElevation="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
 
@@ -24,15 +27,15 @@
 
         <ImageView
                 android:id="@+id/ic_type"
-                android:layout_width="113px"
-                android:layout_height="112px"
+                android:layout_width="43dp"
+                android:layout_height="42dp"
                 android:src="@drawable/ic_type_study" />
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="56px"
-                android:layout_marginTop="6px"
+                android:layout_marginStart="21dp"
+                android:layout_marginTop="2dp"
 
                 android:orientation="vertical">
 
@@ -43,29 +46,31 @@
                 <com.daimajia.numberprogressbar.NumberProgressBar
                         android:id="@+id/number_progress_bar"
                         style="@style/NumberProgressBar_Default"
-                        android:layout_width="492px"
-                        android:layout_height="31px"
-                        app:progress_reached_bar_height="31px"
+                        android:layout_width="187dp"
+                        android:layout_height="11dp"
+                        app:progress_reached_bar_height="11dp"
                         app:progress_reached_color="#B1D3F8"
                         app:progress_text_color="#3498DB"
                         app:progress_text_size="10sp"
                         app:progress_text_visibility="invisible"
-                        app:progress_unreached_bar_height="31px" />
+                        app:progress_unreached_bar_height="11dp" />
 
                 <TextView
                         android:id="@+id/process_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="23px"
+                        android:layout_marginStart="8dp"
                         android:text="33"
-                        android:textSize="38px"
+                        android:textColor="@color/xui_config_color_white"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="%"
-                        android:textSize="38px"
+                        android:textColor="@color/xui_config_color_white"
+                        android:textSize="14dp"
                         android:textStyle="bold" />
             </LinearLayout>
 
@@ -76,9 +81,9 @@
                 <TextView
                         android:id="@+id/tv_type"
                         android:layout_width="73dp"
-                        android:layout_height="11dp"
+                        android:layout_height="match_parent"
                         android:text="学习类："
-                        android:textSize="40px"
+                        android:textSize="15dp"
                         android:textStyle="bold" />
 
                 <TextView
@@ -93,7 +98,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="h "
-                        android:textSize="40px"
+                        android:textSize="15dp"
                         android:textStyle="bold" />
 
                 <TextView
@@ -101,14 +106,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="11"
-                        android:textSize="40px"
+                        android:textSize="15dp"
                         android:textStyle="bold" />
 
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="min"
-                        android:textSize="40px"
+                        android:textSize="15dp"
                         android:textStyle="bold" />
 
                 <LinearLayout
