--- a/app/src/main/res/layout/activity_similar_person.xml
+++ b/app/src/main/res/layout/activity_similar_person.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <GridLayout
+            android:id="@+id/GridView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/adapter_similar_person_item" />
-
-    <include layout="@layout/fragment_bottom_view" />
+            android:layout_height="wrap_content" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
