--- a/app/src/main/res/layout/adapter_similar_person_item.xml
+++ b/app/src/main/res/layout/adapter_similar_person_item.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.xuexiang.xui.widget.imageview.RadiusImageView
-            android:layout_width="82dp"
-            android:layout_height="82dp"
-            android:layout_marginStart="41dp"
-            android:layout_marginTop="41dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_talk"
-            tools:ignore="RtlSymmetry" />
+        android:id="@+id/img_head"
+        android:layout_width="82dp"
+        android:layout_height="82dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_talk"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
-            android:id="@+id/tv_similar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="41dp"
-            android:layout_marginTop="150dp"
-            android:text="@string/similar_level" />
+        android:id="@+id/tv_similarity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/img_head"
+        android:layout_marginTop="20dp"
+        android:text="@string/similar_level" />
 
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
