--- a/app/src/main/res/layout/adapter_time_item.xml
+++ b/app/src/main/res/layout/adapter_time_item.xml
@@ -59,7 +59,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text="33"
+                        android:text="@string/time_percent"
                         android:textColor="@color/xui_config_color_white"
                         android:textSize="14sp"
                         android:textStyle="bold" />
@@ -81,7 +81,7 @@
                         android:id="@+id/tv_type"
                         android:layout_width="73dp"
                         android:layout_height="match_parent"
-                        android:text="学习类："
+                        android:text="@string/study_type"
                         android:textSize="15dp"
                         android:textColor="@color/xui_config_color_white"
                         android:textStyle="bold" />
@@ -91,33 +91,17 @@
                         android:id="@+id/tv_hour"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="2"
+                        android:text="@string/study_hour"
                         android:textSize="40px"
                         android:textStyle="bold" />
 
                 <TextView
                         android:textColor="@color/xui_config_color_white"
+                        android:id="@+id/tv_min"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="h "
-                        android:textSize="15dp"
-                        android:textStyle="bold" />
-
-                <TextView
-                        android:textColor="@color/xui_config_color_white"
-                        android:id="@+id/tv_minute"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="11"
-                        android:textSize="15dp"
-                        android:textStyle="bold" />
-
-                <TextView
-                        android:textColor="@color/xui_config_color_white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="min"
-                        android:textSize="15dp"
+                        android:text="@string/study_min"
+                        android:textSize="40px"
                         android:textStyle="bold" />
 
                 <LinearLayout
