--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -40,19 +40,20 @@
         android:background="@drawable/bd_show_time" />
 
     <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/pie_chart"
-        android:layout_width="333dp"
-        android:layout_height="173dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bd_show_time" />
+            android:id="@+id/pie_chart"
+            android:layout_width="333dp"
+            android:layout_height="173dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bd_show_time" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/bd_show_time"
-        tools:listitem="@layout/adapter_time_item" />
+            android:id="@+id/time_rec_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/bd_show_time"
+            tools:listitem="@layout/adapter_time_item" />
 
 </LinearLayout>
