--- a/app/src/main/res/layout/show_time_page_layout.xml
+++ b/app/src/main/res/layout/show_time_page_layout.xml
@@ -49,6 +49,7 @@
             android:background="@drawable/bd_show_time" />
 
     <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/time_rec_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
