--- a/app/src/main/res/layout/adapter_time_item.xml
+++ b/app/src/main/res/layout/adapter_time_item.xml
@@ -43,6 +43,7 @@
                     android:layout_height="wrap_content">
 
                 <com.daimajia.numberprogressbar.NumberProgressBar
+                        android:layout_gravity="center"
                         android:id="@+id/number_progress_bar"
                         style="@style/NumberProgressBar_Default"
                         android:layout_width="187dp"
@@ -74,42 +75,58 @@
             </LinearLayout>
 
             <LinearLayout
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:gravity="center">
 
                 <TextView
+                        android:id="@+id/tv_app_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="QQ"
+                        android:textColor="@color/xui_config_color_white"
+
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+
+                <TextView
+                        android:layout_width="wrap_content"
                         android:id="@+id/tv_type"
-                        android:layout_width="73dp"
+                        android:layout_marginHorizontal="20dp"
                         android:layout_height="match_parent"
                         android:text="@string/study_type"
                         android:textSize="15dp"
                         android:textColor="@color/xui_config_color_white"
                         android:textStyle="bold" />
 
-                <TextView
-                        android:textColor="@color/xui_config_color_white"
-                        android:id="@+id/tv_hour"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/study_hour"
-                        android:textSize="40px"
-                        android:textStyle="bold" />
-
-                <TextView
-                        android:textColor="@color/xui_config_color_white"
-                        android:id="@+id/tv_min"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/study_min"
-                        android:textSize="40px"
-                        android:textStyle="bold" />
 
                 <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical">
+                        android:layout_gravity="end"
+                        android:gravity="end">
 
                     <TextView
+                            android:id="@+id/tv_hour"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/study_hour"
+                            android:textColor="@color/xui_config_color_white"
+                            android:textSize="40px"
+                            android:textStyle="bold" />
+
+                    <TextView
+                            android:id="@+id/tv_min"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/study_min"
+                            android:textColor="@color/xui_config_color_white"
+                            android:textSize="40px"
+                            android:textStyle="bold" />
+
+                    <TextView
+                            android:layout_marginStart="20dp"
                             android:id="@+id/tv_detail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
