--- a/app/src/main/res/layout/adapter_time_item.xml
+++ b/app/src/main/res/layout/adapter_time_item.xml
@@ -41,11 +41,11 @@
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
-
                 <com.daimajia.numberprogressbar.NumberProgressBar
                         android:layout_gravity="center"
                         android:id="@+id/number_progress_bar"
                         style="@style/NumberProgressBar_Default"
+                        app:progress_current="50"
                         android:layout_width="187dp"
                         android:layout_height="11dp"
                         app:progress_reached_bar_height="11dp"
@@ -82,20 +82,17 @@
 
                 <TextView
                         android:id="@+id/tv_app_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:text="QQ"
                         android:textColor="@color/xui_config_color_white"
-
-                        android:textSize="15dp"
                         android:textStyle="bold" />
 
                 <TextView
                         android:layout_width="wrap_content"
                         android:id="@+id/tv_type"
-                        android:layout_marginHorizontal="20dp"
                         android:layout_height="match_parent"
-                        android:text="@string/study_type"
+                        android:text=""
                         android:textSize="15dp"
                         android:textColor="@color/xui_config_color_white"
                         android:textStyle="bold" />
